--- a/beets/config_default.yaml
+++ b/beets/config_default.yaml
@@ -25,6 +25,7 @@ import:
     pretend: false
     search_ids: []
     duplicate_action: ask
+    bell: yes  
 
 clutter: ["Thumbs.DB", ".DS_Store"]
 ignore: [".*", "*~", "System Volume Information", "lost+found"]
