--- a/beets/config_default.yaml
+++ b/beets/config_default.yaml
@@ -10,6 +10,7 @@ import:
     delete: no
     resume: ask
     incremental: no
+    from_scratch: no
     quiet_fallback: skip
     none_rec_action: ask
     timid: no
