--- a/beets/config_default.yaml
+++ b/beets/config_default.yaml
@@ -126,5 +126,6 @@ match:
         original_year: no
     ignored: []
     required: []
+    ignore_video_tracks: yes
     track_length_grace: 10
     track_length_max: 30
