--- a/beets/config_default.yaml
+++ b/beets/config_default.yaml
@@ -126,7 +126,7 @@ match:
         original_year: no
     ignored: []
     required: []
-    ignored_formats: ['Data CD', 'DVD', 'DVD-Video', 'Blu-ray', 'HD-DVD', 'VCD', 'SVCD', 'UMD', 'VHS']
+    ignored_media: ['Data CD', 'DVD', 'DVD-Video', 'Blu-ray', 'HD-DVD', 'VCD', 'SVCD', 'UMD', 'VHS']
     ignore_video_tracks: yes
     track_length_grace: 10
     track_length_max: 30
