New importer option incremental_skip_later, fixes #2773

--- a/beets/config_default.yaml
+++ b/beets/config_default.yaml
@@ -10,6 +10,7 @@ import:
     delete: no
     resume: ask
     incremental: no
+    incremental_skip_later: no
     from_scratch: no
     quiet_fallback: skip
     none_rec_action: ask
