--- a/.travis.yml
+++ b/.travis.yml
@@ -21,6 +21,8 @@ matrix:
           env: {TOX_ENV: py35-test}
         - python: 3.6
           env: {TOX_ENV: py36-test}
+        - python: 3.7
+          env: {TOX_ENV: py37-test}
         # - python: pypy
         #   - env: {TOX_ENV: pypy-test}
         - python: 3.4
