--- a/tox.ini
+++ b/tox.ini
@@ -4,7 +4,7 @@
 # and then run "tox" from this directory.
 
 [tox]
-envlist = py27-test, py36-test, py27-flake8, docs
+envlist = py27-test, py37-test, py27-flake8, docs
 
 # The exhaustive list of environments is:
 # envlist = py{27,34,35}-{test,cov}, py{27,34,35}-flake8, docs
@@ -50,6 +50,7 @@ commands =
     py34-flake8: flake8 --min-version 3.4 {posargs} {[_flake8]files}
     py35-flake8: flake8 --min-version 3.5 {posargs} {[_flake8]files}
     py36-flake8: flake8 --min-version 3.6 {posargs} {[_flake8]files}
+    py37-flake8: flake8 --min-version 3.7 {posargs} {[_flake8]files}
 
 [testenv:docs]
 basepython = python2.7
