Make `ignore_data_tracks` `yes` by default

--- a/beets/config_default.yaml
+++ b/beets/config_default.yaml
@@ -129,7 +129,7 @@ match:
     ignored: []
     required: []
     ignored_media: []
-    ignore_data_tracks: no
+    ignore_data_tracks: yes
     ignore_video_tracks: yes
     track_length_grace: 10
     track_length_max: 30
