Allow setting default options for `%unique` in the configuration file.

--- a/beets/config_default.yaml
+++ b/beets/config_default.yaml
@@ -48,6 +48,12 @@ asciify_paths: false
 art_filename: cover
 max_filename_length: 0
 
+aunique:
+    keys: albumartist album
+    disambiguators: albumtype year label catalognum albumdisambig
+    bracket: '[]'
+
+
 plugins: []
 pluginpath: []
 threaded: yes
